# ecl-crosscompilation

./: CMakeLists.txt  README.md
.github/workflows/: compile_ubuntu.yml
ecl/: CMakeLists.txt
gmplib/: CMakeLists.txt
